Added Css Day 3 Assignment Web Dev

--- a/Web_Dev/index.html
+++ b/Web_Dev/index.html
@@ -3,104 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Image Gallery</title>
 </head>
 <body>
-    <div style="margin: auto; margin-top: 30px; width: 90%;">
-        <div  style="width: 100%; display: flex; align-items: center; justify-content: space-between;">
-            <div>
-                <h1>Swayangdipta Das</h1>
-                <h4>Full Stack Javascript Developer</h4>
-                <div style="display: flex; gap: 20px;">
-                    <span>swayangdiptacc@gmail.com</span>
-                    <span>9732103890</span>
-                    <span><a href="github.com/swayangdipta">github</a></span>
-                </div>
-            </div>
-            <img style="border-radius: 50%;" width="150px" height="150px" src="https://avatars.githubusercontent.com/u/31970602?v=4" alt="">
-        </div>
-        <hr>
+    <header>
+        <h1>Image Gallery</h1>
+        <button class="some_btn">Join</button>
+    </header>
 
-        <div style="width: 100%; display: flex; align-items: start; justify-content: space-between; gap: 100px;">
-            <div>
-                <div>
-                    <h3>Objective</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum facere, voluptatibus rerum sequi voluptatum non unde dignissimos sed? Quaerat vero eveniet sapiente. Architecto, commodi. Eum cumque ipsum iusto temporibus mollitia.</p>
-                </div>
-                <div>
-                    <h3>Projects</h3>
-                    <ul>
-                        <li>
-                            <h4>E-commerce Website FullStack</h4>
-                            <h5>Tech Stack: React, Node, Express, MongoDb</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius error necessitatibus quis architecto voluptatum in, ducimus provident dignissimos minima laudantium? Porro laboriosam nulla quisquam pariatur ipsum, voluptatum tenetur harum dolore iste ipsa! Fugit error, repellendus exercitationem sapiente accusantium cupiditate dolorem.</p>
-                        </li>
-                        <li>
-                            <h4>E-commerce Website FullStack</h4>
-                            <h5>Tech Stack: React, Node, Express, MongoDb</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius error necessitatibus quis architecto voluptatum in, ducimus provident dignissimos minima laudantium? Porro laboriosam nulla quisquam pariatur ipsum, voluptatum tenetur harum dolore iste ipsa! Fugit error, repellendus exercitationem sapiente accusantium cupiditate dolorem.</p>
-                        </li>
-                        <li>
-                            <h4>E-commerce Website FullStack</h4>
-                            <h5>Tech Stack: React, Node, Express, MongoDb</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius error necessitatibus quis architecto voluptatum in, ducimus provident dignissimos minima laudantium? Porro laboriosam nulla quisquam pariatur ipsum, voluptatum tenetur harum dolore iste ipsa! Fugit error, repellendus exercitationem sapiente accusantium cupiditate dolorem.</p>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>Skills</h3>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JAVASCRIPT</li>
-                        <li>REACT</li>
-                        <li>NODE</li>
-                        <li>MONGODB</li>
-                        <li>EXPRESS</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div style="width: 500px;">
-                <div>
-                    <h3>Education</h3>
-                    <div>
-                        <h5>Bengal Institute Of Technology and Management</h5>
-                        <p>Computer Science and Engineering</p>
-                        <p>2018-2021</p>
-                    </div>
-                    <div>
-                        <h5>Nalhati Government Polytechnic</h5>
-                        <p>Computer Science and Technology</p>
-                        <p>2015-2018</p>
-                    </div>
-                </div>
-                <div>
-                    <h3>Certifications</h3>
-                    <div>
-                        <h5>FullStack Javascript Web Devleoper</h5>
-                        <p>By- iNeuron Intelligence</p>
-                    </div>
-                    <div>
-                        <h5>MERN Stack Devleoper Bootcamp</h5>
-                        <p>By- LearnCodeOnline.in</p>
-                    </div>
-                    <div>
-                        <h5>ReactJS Developer</h5>
-                        <p>By- LearnCodeOnline.in</p>
-                    </div>
-                </div>
-                <div>
-                    <h3>Languages</h3>
-                    <ul>
-                        <li>Bengali</li>
-                        <li>Hindi</li>
-                        <li>English</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <div class="gallery_container">
+        <img src="https://loremflickr.com/320/240?lock=1" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=2" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=3" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=4" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=5" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=6" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=7" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=8" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=9" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=10" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=11" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=12" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=13" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=14" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=15" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=16" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=17" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=18" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=19" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=111" alt="" class="gallery_img">
+        <img src="https://loremflickr.com/320/240?lock=100" alt="" class="gallery_img">
     </div>
-
 </body>
 </html>
